<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="477dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="26dp"
            android:gravity="center_vertical"
            android:text="@string/edit_name"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_name"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/edit_name"
            android:ems="10"
            android:hint="@string/name_field" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/edit_type"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_name"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/edit_type"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignRight="@+id/name_field"
            android:layout_alignTop="@+id/edit_type"
            android:entries="@array/event_type_array"
            android:prompt="@string/event_array_prompt" />

        <TextView
            android:id="@+id/edit_location"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_type"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/event_locationLabel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_field"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_location"
            android:layout_below="@+id/spinner1"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/location_field"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/edit_startDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_location"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/event_editStartDate"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startDate_field"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_startDate"
            android:layout_below="@+id/location_field"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/date_field"
            android:inputType="date"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/edit_endDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_startDate"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/event_editEndDate"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endDate_field"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_endDate"
            android:layout_below="@+id/startDate_field"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/date_field"
            android:inputType="date"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/edit_startTime"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_endDate"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/event_editStartTime"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startTime_field"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_startTime"
            android:layout_below="@+id/endDate_field"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/start_field"
            android:inputType="time"
            android:onClick="openTimePicker"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/edit_endTime"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_startTime"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/event_editEndTime"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endTime_field"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_endTime"
            android:layout_below="@+id/startTime_field"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/end_field"
            android:inputType="time"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/edit_description"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_endTime"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/event_decriptionLabel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_field"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignTop="@+id/edit_description"
            android:layout_below="@+id/endTime_field"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/description_field"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_addEvent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:onClick="submitEvent"
            android:text="@string/submit" />

        <Button
            android:id="@+id/button_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/startDate_field"
            android:layout_alignLeft="@+id/startDate_field"
            android:layout_alignRight="@+id/startDate_field"
            android:layout_alignTop="@+id/startDate_field"
            android:background="@android:color/transparent"
            android:onClick="showDatePickerDialog" />

        <Button
            android:id="@+id/button_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/endDate_field"
            android:layout_alignLeft="@+id/endDate_field"
            android:layout_alignRight="@+id/endDate_field"
            android:layout_alignTop="@+id/endDate_field"
            android:background="@android:color/transparent"
            android:onClick="showDatePickerDialog" />

        <Button
            android:id="@+id/button_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/startTime_field"
            android:layout_alignLeft="@+id/startTime_field"
            android:layout_alignRight="@+id/startTime_field"
            android:layout_alignTop="@+id/startTime_field"
            android:background="@android:color/transparent"
            android:onClick="showTimePickerDialog" />

        <Button
            android:id="@+id/button_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/endTime_field"
            android:layout_alignLeft="@+id/endTime_field"
            android:layout_alignRight="@+id/endTime_field"
            android:layout_alignTop="@+id/endTime_field"
            android:background="@android:color/transparent"
            android:onClick="showTimePickerDialog" />
    </RelativeLayout>

</ScrollView>