<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/text_event_name"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/event_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="#33b5e5" />

        <TextView
            android:id="@+id/text_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_event_name"
            android:layout_centerHorizontal="true"
            android:text="@string/event_category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text_event_locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_event_type"
            android:layout_marginTop="42dp"
            android:text="@string/event_locationLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_event_startLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_event_locationLabel"
            android:layout_marginTop="23dp"
            android:text="@string/event_startLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_event_endLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_event_startLabel"
            android:layout_marginTop="23dp"
            android:text="@string/event_endLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/editText_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_event_locationLabel"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/text_event_descriptionLabel"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_event_startLabel"
            android:layout_alignLeft="@+id/editText_location"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_event_endLabel"
            android:layout_alignLeft="@+id/editText_start"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_event_descriptionLabel"
            android:layout_marginTop="14dp"
            android:ems="10" />

        <TextView
            android:id="@+id/text_event_descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_event_endLabel"
            android:layout_marginTop="23dp"
            android:text="@string/event_decriptionLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/mapicon" 
            android:background="@android:color/transparent" 
            android:contentDescription="@string/viewmap" />


    </RelativeLayout>
</ScrollView>