<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/text_sight_name"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_sight_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_sight_name"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_sight_locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_sight_type"
            android:layout_marginTop="42dp"
            android:text="@string/sight_locationLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_sight_openingHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_sight_locationLabel"
            android:layout_marginTop="15dp"
            android:text="@string/sight_openingHoursLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_sight_closingHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_sight_openingHoursLabel"
            android:layout_marginTop="15dp"
            android:text="@string/sight_closingHoursLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/editText_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_sight_locationLabel"
            android:layout_alignLeft="@+id/editText_openingHours"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_openingHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_sight_openingHoursLabel"
            android:layout_alignLeft="@+id/editText_closingHours"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_closingHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_sight_closingHoursLabel"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_sight_descriptionLabel"
            android:layout_marginTop="15dp"
            android:ems="10" />

        <TextView
            android:id="@+id/text_sight_descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_sight_closingHoursLabel"
            android:layout_below="@+id/text_sight_closingHoursLabel"
            android:layout_marginTop="15dp"
            android:text="@string/sight_descriptionLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/mapicon" 
            android:background="@android:color/transparent" 
            android:contentDescription="@string/viewmap" />

    </RelativeLayout>
</ScrollView>